Add secure password to User model

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -3,7 +3,9 @@
 one:
   email: one@extensionschool.ch
   name: User One
+  password_digest: <%= BCrypt::Password.create('testpassword') %>
 
 two:
   email: two@extensionschool.ch
   name: User Two
+  password_digest: <%= BCrypt::Password.create('testpassword') %>
